@@ -1,13 +1,13 @@
 package com.oheers.fish.database.connection;
 
 
-import com.google.common.collect.ImmutableMap;
 import com.oheers.fish.config.MainConfig;
 import com.oheers.fish.database.DatabaseUtil;
 import com.zaxxer.hikari.HikariConfig;
 import com.zaxxer.hikari.HikariDataSource;
 import org.flywaydb.core.Flyway;
 import org.flywaydb.core.api.FlywayException;
+import org.flywaydb.core.api.MigrationInfoService;
 import org.flywaydb.core.api.MigrationVersion;
 import org.flywaydb.core.api.configuration.FluentConfiguration;
 import org.jetbrains.annotations.NotNull;
@@ -166,7 +166,7 @@ public abstract class ConnectionFactory {
     private FluentConfiguration getBaseFlywayConfiguration() {
         return Flyway.configure(getClass().getClassLoader())
                 .dataSource(dataSource)
-                .placeholders(ImmutableMap.of(
+                .placeholders(Map.of(
                         "table.prefix", MainConfig.getInstance().getPrefix(),
                         "auto.increment", MainConfig.getInstance().getDatabaseType().equalsIgnoreCase("mysql") ? "AUTO_INCREMENT" : "",
                         "primary.key", MainConfig.getInstance().getDatabaseType().equalsIgnoreCase("mysql") ? "PRIMARY KEY (id)" : "PRIMARY KEY (id AUTOINCREMENT)",
@@ -184,6 +184,10 @@ public abstract class ConnectionFactory {
     }
 
     public MigrationVersion getDatabaseVersion() {
+        MigrationInfoService infoService = getBaseFlywayConfiguration().load().info();
+        if (infoService.current() == null) {
+            return MigrationVersion.fromVersion("0");
+        }
         return getBaseFlywayConfiguration().load().info().current().getVersion();
     }
 }
